# JuFo-2026

./: .gitignore  .gitmodules  README.md
JuFo-notes/: TODO.md
JuFo-notes/.obsidian/: workspace.json
evaluation/: benchmark.py  compilation_notes.md  coreutils_compilation  example  requirements.txt
evaluation/big/llvm-test-suite-build/: .lit_test_times.txt  CMakeCache.txt  Makefile  cmake_install.cmake  results.json
evaluation/big/llvm-test-suite-build/Bitcode/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/Bitcode/Benchmarks/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/Bitcode/Regression/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/Bitcode/simd_ops/: Makefile  cmake_install.cmake  simd_ops_test_op_addpd_190.test  simd_ops_test_op_addpd_205.test  simd_ops_test_op_addpd_220.test  simd_ops_test_op_addps_117.test  simd_ops_test_op_addps_165.test  simd_ops_test_op_addps_21.test  simd_ops_test_op_addps_69.test  simd_ops_test_op_andps_186.test  simd_ops_test_op_blendvpd_254.test  simd_ops_test_op_blendvpd_277.test  simd_ops_test_op_blendvpd_300.test  simd_ops_test_op_blendvps_253.test  simd_ops_test_op_blendvps_276.test  simd_ops_test_op_blendvps_299.test  simd_ops_test_op_cmpeqpd_197.test  (+367 more)
evaluation/big/llvm-test-suite-build/MicroBenchmarks/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/MultiSource/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/SingleSource/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build/litsupport/: Makefile
evaluation/big/llvm-test-suite-build/tools/: Makefile  cmake_install.cmake  fpcmp-target  fpcmp-target.test  not  not.stripped  timeit-target
evaluation/big/llvm-test-suite-build_obfuscated/: .lit_test_times.txt  CMakeCache.txt  Makefile  cmake_install.cmake  lit.site.cfg  results.json
evaluation/big/llvm-test-suite-build_obfuscated/MultiSource/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build_obfuscated/SingleSource/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build_obfuscated/litsupport/: Makefile  cmake_install.cmake
evaluation/big/llvm-test-suite-build_obfuscated/tools/: Makefile  fpcmp  fpcmp-target  not  timeit  timeit-target
evaluation/big/sqlite-amalgamation-3470000/: benchmark.sql  sqlite.json  sqlite3_base  sqlite3_obf
evaluation/llvm-test-suite-build/: results0.json
evaluation/llvm-test-suite-build_obfuscated/: averaged_results100.json  averaged_results20.json  averaged_results40.json  averaged_results60.json  averaged_results80.json  evaluate.py  plot_costs.py  plot_potency.py  plot_stealth.py  results100.json  results20.json  results40.json  results60.json  results80.json  results_new100.json  run.sh  test.py  test_angr.py  test_miasm.py  test_triton.py
evaluation/llvm-test-suite-build_obfuscated/results/: results100_1.json  results100_2.json  results100_3.json  results100_4.json  results100_5.json  results20_1.json  results20_2.json  results20_3.json  results20_4.json  results20_5.json  results40_1.json  results40_2.json  results40_3.json  results40_4.json  results40_5.json  results60_1.json  results60_2.json  results60_3.json  results60_4.json  results60_5.json  results80_1.json  results80_2.json  results80_3.json  results80_4.json  results80_5.json
evaluation/llvm-test-suite-build_obfuscated/results_raw/: results100.json  results100_1.json  results100_2.json  results100_3.json  results100_4.json  results100_5.json  results20_1.json  results20_2.json  results20_3.json  results20_4.json  results20_5.json  results40_1.json  results40_2.json  results40_3.json  results40_4.json  results40_5.json  results60_1.json  results60_2.json  results60_3.json  results60_4.json  results60_5.json  results80_1.json  results80_2.json  results80_3.json  results80_4.json  results80_5.json  results99.json
evaluation/my-venv/: pyvenv.cfg
evaluation/small/coreutils/m4/: extern-inline.m4
examples/: ITWORKS.ll  OUTPUT.bc  clean.bat  clean.sh  example  example.bc  example.c  example.cpp  example.id0  example.id1  example.id2  example.ilk  example.ll  example.nam  example.til  example_obf.bc  example_obf.ll  example_works  test  test.bat  test.c  test.py  test.sh  test_debug.bat  test_direct.sh  test_laptop.bat
examples/crackme/: build.sh  build2.sh  crackme  crackme.c  crackme2  crackme2.c  crackme2_obf  crackme2_obf.c  crackme_obf  crackme_obf.c  main.py  pyproject.toml  solve.py  sym_exec.py
experiments/: bernstein.py  distrib.py  fermat.py  fermat_sym_exec.py  fermats_last_theorem.cpp  fermats_last_theorem.ll  gen_distrib.py  generate_distribution.py  hash_random.py  test.cpp
experiments/figures/: bernstein.py  cdf_inv.py  cdf_inv_exp.py  continuous.py  discrete.py  pdf_bump.py  runge.py
experiments/timing/: thread.py  threading.cpp
notes/: EVALUIERUNG.md  FRAGEN.md  Hintergrund & Motivation.md  IDEE GEGEN PATTERN-MATCHING.md  Methoden.md  Notizen.md  TODO Implementierung.md  TODO Recherche.md  TODO Schreiben.md  TODO.md  UMFRAGE.md
notes/.obsidian/: workspace.json
obfuscator-pass/: CMakeLists.txt  Dockerfile  README.md
obfuscator-pass/skeleton/: CMakeLists.txt  Skeleton.cpp
obfuscator-pass/src/: CMakeLists.txt  GenerateDistribution.cpp  GenerateDistribution.hpp  Obfuscator.cpp  Parameters.hpp  obfuscator.cpp
obfuscator-pass/src/Distribution-Generation/: BernsteinPolynomialRegression.cpp  BernsteinPolynomialRegression.hpp  Bernsteinpolynomial.cpp  Bernsteinpolynomial.hpp  GenerateDistribution.cpp  GenerateDistribution.hpp
obfuscator-pass/src/Randomness-Generation/: Randomness.cpp  Randomness.hpp
obfuscator-pass/src/Utils/: Utils.cpp  Utils.hpp
paper/: ansatz.tex  bib.bib  evaluierung.tex  hintergrund.tex  implementierung.tex  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.tex  theorie.tex
paper/old/: cfg1.tex  pseudocode1.tex
poster/: Jufo 2.pptx  Jufo horiz.pptx  Jufo old.pptx  Jufo v1.pptx  Jufo v2.pptx  Jufo v3.pptx  Jufo v4.pptx  Jufo vert.pptx
(+18060 files in other folders)
